--- a/2017-S1/D3/styles.css
+++ b/2017-S1/D3/styles.css
@@ -1,4 +1,4 @@
-#bar {
+.bar {
     display: inline-block;
     width: 20px;
     height: 75px;
@@ -6,7 +6,7 @@
     margin-right: 2px;
 }
 
-#circle {
+.circle {
     fill: orange;
     stroke: yellow;
 }
