--- a/JavaScript/w3schools-jQuery/src/3_HTML.css
+++ b/JavaScript/w3schools-jQuery/src/3_HTML.css
@@ -4,3 +4,40 @@
     border: 1px solid black;
     background-color: yellow;
 }
+
+.blue {
+    color: blue;
+}
+
+.important {
+    font-weight: bold;
+    font-size: xx-large;
+}
+
+#p5 {
+    background-color: #ff0000;
+}
+
+#p6 {
+    background-color: #00ff00;
+}
+
+#p7 {
+    background-color: #0000ff;
+}
+
+#txt13 {
+    height: 150px;
+    width: 300px;
+    padding: 10px;
+    margin: 3px;
+    border: 1px solid blue;
+    background-color: lightblue;
+}
+
+#txt_last {
+    height: 50px;
+    width: 50px;
+    border: 1px solid blue;
+    background-color: lightblue;
+}
